Fix path input width, slim margin on smaller screens

--- a/src/play.css
+++ b/src/play.css
@@ -259,6 +259,9 @@ body ul, body ol {
 }
 
 @media screen and (max-width: 768px) {
+  body {
+    margin: 1rem;
+  }
   .container {
     display: flex;
     flex-direction: column;
@@ -299,6 +302,7 @@ body ul, body ol {
   background-color: var(--color-input-bg);
   border: 1px solid var(--color-input-border);
   border-radius: .5rem;
+  box-sizing: border-box;
 }
 
 #go {
